# gospel-search

./: .dockerignore  .gitignore  ER.md  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
dockerfiles/: api.Dockerfile  crawler.Dockerfile  docker-compose.yaml  embedder.Dockerfile  nlp-service.Dockerfile  proxy-service.Dockerfile  worker.Dockerfile
evaluate/: __main__.py  search-results copy.json  search-results.json
gospel_search/: utils.py
gospel_search/api/: main.py  types.py
gospel_search/chroma/: client.py  import_segments.py
gospel_search/database/: client.py  populate.py  segment.py
gospel_search/elasticsearch/: client.py  import_segments.py
gospel_search/llm/: main.py
gospel_search/mongodb/: client.py  compute_embeddings.py  extract_segments.py  populate.py  pull_pages.py  segment.py
gospel_search/nextjs/components/: SearchResult.js  SearchResult.tsx
gospel_search/nextjs/pages/: _app.js  index.js  index.tsx
gospel_search/nextjs/pages/api/: search.js
gospel_search/nlp_server/: __main__.py  main.py  rerank.py  text_embedder.py
gospel_search/pages/: config.py  page.py  utils.py
gospel_search/pages/conference/: talk.py  utils.py
gospel_search/pages/scripture/: chapter.py  scripture_book_map.json  utils.py
gospel_search/ui/components/: Reference.tsx  SearchBar.tsx  SearchResult.tsx
gospel_search/ui/pages/: _app.tsx  index.tsx  qa.tsx  search.tsx
gospel_search/ui/pages/api/: _utils.ts  qa.ts  search.ts
gospel_search/web_scraping/: config.py  utils.py
gospel_search/web_scraping/conference/: talk.py  utils.py
gospel_search/web_scraping/scripture/: chapter.py  utils.py
gospel_search/worker/: main.py  schemas.py
requirements/: crawler.txt  embedder.txt  nlp-service.txt  worker.txt
scripts/: crawl.sh  embed.sh  extract.sh  gen-reqs.sh  import.sh  start-db.sh  start-services.sh
